Ensure chevron always stays in view on mobile.
6rem margin bottom should be enough to handle counter most browser URL
bars.

This fix solves issues with vh units on mobile.

Also improve behavior of intro chevron.

--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -3,8 +3,8 @@ section.intro {
     padding: 0;
     display: grid;
     justify-items: center;
-    height: calc(100vh - var(--header-height));
-    position: relative;
+    height: 100vh;
+    padding-top: var(--header-height);
     background: transparent;
     box-shadow: none;
     color: #000;
@@ -19,7 +19,8 @@ section.intro {
 
 a.center-bottom {
     align-self: end;
-    padding-bottom: 2rem;
+    margin-bottom: 6rem;
+    padding: 2rem;
 }
 
 a.center-bottom:hover {
